--- a/autos-backend/src/main/resources/application.properties
+++ b/autos-backend/src/main/resources/application.properties
@@ -1,7 +1,8 @@
-spring.datasource.url=jdbc:mysql://127.0.0.1:3306/registo_autos
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/registro_autos
 spring.datasource.username=root
 spring.datasource.password=root
 
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+
 
